--- a/GenAI/2022pai9056_GenAI_Ass2.ipynb
+++ b/GenAI/2022pai9056_GenAI_Ass2.ipynb
@@ -48,14 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$SPY wouldn't be surprised to see a green close\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (227371831.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [109]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(df.[0])\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -67,12 +68,12 @@
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the DataFrame\n",
-    "print(df.Sentence[5])\n"
+    "print(df.Sentence[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -81,17 +82,7 @@
      "text": [
       "5842\n"
      ]
-    }
-   ],
-   "source": [
-    "print(len(df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -149,13 +140,14 @@
     }
    ],
    "source": [
-    "df1=df.groupby('Sentiment').size().reset_index(name='count')\n",
-    "display(df1)"
+    "print(len(df))\n",
+    "\n",
+    "display(df.groupby('Sentiment').size().reset_index(name='count'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,29 +166,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The GeoSolutions technology will leverage Benefon 's GPS solutions by providing Location Based Search Technology , a Communities Platform , location relevant multimedia content and a new and powerful commercial model . ['geosolutions', 'technology', 'leverage', 'benefon', 'gps', 'solutions', 'providing', 'location', 'based', 'search', 'technology', 'communities', 'platform', 'location', 'relevant', 'multimedia', 'content', 'new', 'powerful', 'commercial', 'model']\n",
-      "$ESI on lows, down $1.50 to $2.50 BK a real possibility ['esi', 'lows', '150', '250', 'bk', 'real', 'possibility']\n",
-      "For the last quarter of 2010 , Componenta 's net sales doubled to EUR131m from EUR76m for the same period a year earlier , while it moved to a zero pre-tax profit from a pre-tax loss of EUR7m . ['last', 'quarter', '2010', 'componenta', 'net', 'sales', 'doubled', 'eur131m', 'eur76m', 'period', 'year', 'earlier', 'moved', 'zero', 'pretax', 'profit', 'pretax', 'loss', 'eur7m']\n",
-      "According to the Finnish-Russian Chamber of Commerce , all the major construction companies of Finland are operating in Russia . ['according', 'finnishrussian', 'chamber', 'commerce', 'major', 'construction', 'companies', 'finland', 'operating', 'russia']\n",
-      "The Swedish buyout firm has sold its remaining 22.4 percent stake , almost eighteen months after taking the company public in Finland . ['swedish', 'buyout', 'firm', 'sold', 'remaining', '224', 'percent', 'stake', 'almost', 'eighteen', 'months', 'taking', 'company', 'public', 'finland']\n",
-      "$SPY wouldn't be surprised to see a green close ['spy', 'wouldnt', 'surprised', 'see', 'green', 'close']\n"
+      "     SentenceID Sentiment                                  Original Sentence  \\\n",
+      "0            S0  positive  The GeoSolutions technology will leverage Bene...   \n",
+      "1            S1  negative  $ESI on lows, down $1.50 to $2.50 BK a real po...   \n",
+      "2            S2  positive  For the last quarter of 2010 , Componenta 's n...   \n",
+      "3            S3   neutral  According to the Finnish-Russian Chamber of Co...   \n",
+      "4            S4   neutral  The Swedish buyout firm has sold its remaining...   \n",
+      "...         ...       ...                                                ...   \n",
+      "5837      S5837  negative  RISING costs have forced packaging producer Hu...   \n",
+      "5838      S5838   neutral  Nordic Walking was first used as a summer trai...   \n",
+      "5839      S5839   neutral  According shipping company Viking Line , the E...   \n",
+      "5840      S5840   neutral  In the building and home improvement trade , s...   \n",
+      "5841      S5841  positive  HELSINKI AFX - KCI Konecranes said it has won ...   \n",
+      "\n",
+      "                                         Processed_text  \n",
+      "0     [geosolutions, technology, leverage, benefon, ...  \n",
+      "1          [esi, lows, 150, 250, bk, real, possibility]  \n",
+      "2     [last, quarter, 2010, componenta, net, sales, ...  \n",
+      "3     [according, finnishrussian, chamber, commerce,...  \n",
+      "4     [swedish, buyout, firm, sold, remaining, 224, ...  \n",
+      "...                                                 ...  \n",
+      "5837  [rising, costs, forced, packaging, producer, h...  \n",
+      "5838  [nordic, walking, first, used, summer, trainin...  \n",
+      "5839  [according, shipping, company, viking, line, e...  \n",
+      "5840  [building, home, improvement, trade, sales, de...  \n",
+      "5841  [helsinki, afx, kci, konecranes, said, order, ...  \n",
+      "\n",
+      "[5842 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
-    "for i in range(0,6):\n",
-    "    #print(df.Sentence[i])\n",
+    "preprocessed_data = []\n",
+    "for i in range(len(df)):\n",
+    "    # print(i)\n",
+    "    # print(df.Sentence[i])\n",
     "    #text = \"This is an example sentence for preprocessing.\"\n",
-    "    preprocessed_text = preprocess_text(df.Sentence[i])\n",
-    "    print(df.Sentence[i],preprocessed_text)"
+    "    preprocessed_text = preprocess_text(df['Sentence'][i])\n",
+    "    preprocessed_data.append({\n",
+    "    'SentenceID':\"S\"+str(i),\n",
+    "    'Sentiment':df.Sentiment[i],\n",
+    "    'Original Sentence':df.Sentence[i],\n",
+    "    'Processed_text':preprocessed_text}\n",
+    "                              )\n",
+    "\n",
+    "preprocessed_df = pd.DataFrame(preprocessed_data)\n",
+    "print(preprocessed_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SentenceID                                                        S100\n",
+      "Sentiment                                                     positive\n",
+      "Original Sentence    Hargreaves Lansdown bucks weak markets to see ...\n",
+      "Processed_text       [hargreaves, lansdown, bucks, weak, markets, s...\n",
+      "Name: 100, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preprocessed_df.iloc[100])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# Example preprocessed data (list of tokenized sentences)\n",
+    "preprocessed_data = [\n",
+    "    ['this', 'is', 'an', 'example', 'sentence'],\n",
+    "    ['another', 'example', 'sentence'],\n",
+    "    ['yet', 'another', 'example', 'sentence'],\n",
+    "    ['one', 'more', 'example', 'sentence'],\n",
+    "    ['and', 'one', 'more'],\n",
+    "    ['final', 'example', 'sentence']\n",
+    "]\n",
+    "\n",
+    "# CBOW Model\n",
+    "cbow_model = Word2Vec(sentences=preprocessed_data, vector_size=100, window=5, min_count=1, sg=0)\n",
+    "\n",
+    "# Skip-gram Model\n",
+    "skipgram_model = Word2Vec(sentences=preprocessed_data, vector_size=100, window=5, min_count=1, sg=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embedding vector for 'example' in CBOW model: [-8.6196875e-03  3.6657380e-03  5.1898835e-03  5.7419385e-03\n",
+      "  7.4669183e-03 -6.1676754e-03  1.1056137e-03  6.0472824e-03\n",
+      " -2.8400505e-03 -6.1735227e-03 -4.1022300e-04 -8.3689485e-03\n",
+      " -5.6000124e-03  7.1045388e-03  3.3525396e-03  7.2256695e-03\n",
+      "  6.8002474e-03  7.5307419e-03 -3.7891543e-03 -5.6180597e-04\n",
+      "  2.3483764e-03 -4.5190323e-03  8.3887316e-03 -9.8581640e-03\n",
+      "  6.7646410e-03  2.9144168e-03 -4.9328315e-03  4.3981876e-03\n",
+      " -1.7395747e-03  6.7113843e-03  9.9648498e-03 -4.3624435e-03\n",
+      " -5.9933780e-04 -5.6956373e-03  3.8508223e-03  2.7866268e-03\n",
+      "  6.8910765e-03  6.1010956e-03  9.5384968e-03  9.2734173e-03\n",
+      "  7.8980681e-03 -6.9895042e-03 -9.1558648e-03 -3.5575271e-04\n",
+      " -3.0998408e-03  7.8943167e-03  5.9385742e-03 -1.5456629e-03\n",
+      "  1.5109634e-03  1.7900408e-03  7.8175711e-03 -9.5101865e-03\n",
+      " -2.0553112e-04  3.4691966e-03 -9.3897223e-04  8.3817719e-03\n",
+      "  9.0107834e-03  6.5365066e-03 -7.1162102e-04  7.7104042e-03\n",
+      " -8.5343346e-03  3.2071066e-03 -4.6379971e-03 -5.0889552e-03\n",
+      "  3.5896183e-03  5.3703394e-03  7.7695143e-03 -5.7665063e-03\n",
+      "  7.4333609e-03  6.6254963e-03 -3.7098003e-03 -8.7456414e-03\n",
+      "  5.4374672e-03  6.5097557e-03 -7.8755023e-04 -6.7098560e-03\n",
+      " -7.0859254e-03 -2.4970602e-03  5.1432536e-03 -3.6652375e-03\n",
+      " -9.3700597e-03  3.8267397e-03  4.8844791e-03 -6.4285635e-03\n",
+      "  1.2085581e-03 -2.0748770e-03  2.4403334e-05 -9.8835090e-03\n",
+      "  2.6920044e-03 -4.7501065e-03  1.0876465e-03 -1.5762246e-03\n",
+      "  2.1966731e-03 -7.8815762e-03 -2.7171839e-03  2.6631986e-03\n",
+      "  5.3466819e-03 -2.3915148e-03 -9.5100943e-03  4.5058788e-03]\n",
+      "Similar words to 'example' in CBOW model: [('one', 0.06796975433826447), ('an', 0.033640578389167786), ('final', 0.009391162544488907), ('another', 0.0045030261389911175), ('sentence', -0.010839177295565605), ('more', -0.023677315562963486), ('is', -0.09575345367193222), ('and', -0.11410745233297348), ('yet', -0.11555545777082443), ('this', -0.13429947197437286)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the embedding vector for a specific word\n",
+    "print(\"Embedding vector for 'example' in CBOW model:\", cbow_model.wv['example'])\n",
+    "\n",
+    "# Find similar words\n",
+    "similar_words = cbow_model.wv.most_similar('example')\n",
+    "print(\"Similar words to 'example' in CBOW model:\", similar_words)\n"
    ]
   },
   {
@@ -334,127 +451,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"The GeoSolutions technology will leverage Benefon 's GPS solutions by providing Location Based Search Technology , a Communities Platform , location relevant multimedia content and a new and powerful commercial model .\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'$ESI on lows, down $1.50 to $2.50 BK a real possibility'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"For the last quarter of 2010 , Componenta 's net sales doubled to EUR131m from EUR76m for the same period a year earlier , while it moved to a zero pre-tax profit from a pre-tax loss of EUR7m .\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'According to the Finnish-Russian Chamber of Commerce , all the major construction companies of Finland are operating in Russia .'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The Swedish buyout firm has sold its remaining 22.4 percent stake , almost eighteen months after taking the company public in Finland .'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"$SPY wouldn't be surprised to see a green close\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         Sentence Sentiment  \\\n",
+      "0  This is an example sentence for preprocessing.  Positive   \n",
+      "1         Another example sentence to preprocess.  Negative   \n",
+      "2                   Yet another example sentence.  Positive   \n",
+      "3                      One more example sentence.  Negative   \n",
+      "4                                   And one more.   Neutral   \n",
+      "5                         Final example sentence.  Positive   \n",
+      "\n",
+      "                          Preprocessed_Text  \n",
+      "0        [example, sentence, preprocessing]  \n",
+      "1  [another, example, sentence, preprocess]  \n",
+      "2         [yet, another, example, sentence]  \n",
+      "3                  [one, example, sentence]  \n",
+      "4                                     [one]  \n",
+      "5                [final, example, sentence]  \n"
+     ]
     }
    ],
    "source": [
-    "# Example usage:\n",
-    "for i in range(0,6):\n",
-    "    #print(df.Sentence[i])\n",
-    "    #text = \"This is an example sentence for preprocessing.\"\n",
-    "    skipgram_model = Word2Vec(df.Sentence[i], vector_size=100, window=5, min_count=1, sg=1)\n",
+    "import pandas as pd\n",
     "\n",
-    "    display(df.Sentence[i])\n",
-    "    display(skipgram_model.comment)"
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'Sentence': [\n",
+    "        \"This is an example sentence for preprocessing.\",\n",
+    "        \"Another example sentence to preprocess.\",\n",
+    "        \"Yet another example sentence.\",\n",
+    "        \"One more example sentence.\",\n",
+    "        \"And one more.\",\n",
+    "        \"Final example sentence.\"\n",
+    "    ],\n",
+    "    'Sentiment': [\n",
+    "        'Positive',\n",
+    "        'Negative',\n",
+    "        'Positive',\n",
+    "        'Negative',\n",
+    "        'Neutral',\n",
+    "        'Positive'\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Function for text preprocessing\n",
+    "def preprocess_text(text):\n",
+    "    # Convert text to lowercase\n",
+    "    text = text.lower()\n",
+    "    # Remove punctuation\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "    # Tokenize text\n",
+    "    tokens = word_tokenize(text)\n",
+    "    # Remove stopwords\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    tokens = [word for word in tokens if word not in stop_words]\n",
+    "    return tokens\n",
+    "\n",
+    "# Create a list to store preprocessed text data\n",
+    "preprocessed_texts = []\n",
+    "\n",
+    "# Iterate through each row in the DataFrame\n",
+    "for i in range(len(df)):\n",
+    "    preprocessed_text = preprocess_text(df['Sentence'][i])\n",
+    "    preprocessed_texts.append(preprocessed_text)\n",
+    "\n",
+    "# Add preprocessed text to the DataFrame\n",
+    "df['Preprocessed_Text'] = preprocessed_texts\n",
+    "\n",
+    "print(df)\n"
    ]
   }
  ],
