--- a/Project/ISL/Action Detection Refined.ipynb
+++ b/Project/ISL/Action Detection Refined.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,9 +400,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages (1.4.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (2022.2.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -orch (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -orch (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -orch (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -orch (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ransformers (c:\\users\\ranjan.patra\\appdata\\roaming\\python\\python310\\site-packages)\n"
+     ]
+    }
+   ],
    "source": [
     "pip install pandas"
    ]
@@ -541,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,104 +583,109 @@
     "df = pd.read_csv(csv_file_path).head(1)\n",
     "\n",
     "# Define the root path using raw string literal\n",
-    "rootpath = 'r\"C:/Users/ranjan.patra/OneDrive - Lingaro Sp. z o. o/DATA/IITJ/Course/Projects/ISL/'\n"
+    "rootpath = 'C:/Users/ranjan.patra/OneDrive - Lingaro Sp. z o. o/DATA/IITJ/Course/Projects/ISL/'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (2).MP4\"\n",
-      "Error: Unable to open video file.\n",
-      "End of video.\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (2).MP4\n",
+      "Hi\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "Hi1\n",
+      "End of video reached. Exiting loop.\n",
+      "Cap realease\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "import cv2\n",
     "for index, row in df.iterrows():\n",
     "    #print(index)\n",
     "    label = row[\"Sentences\"]  # Get the \"Word\" value for the current row\n",
-    "    video_path = rootpath + row[\"File location\"] + '\"'\n",
-    "    video_path = video_path.replace('/', '\\\\')\n",
-    "    \n",
-    "    video_path1 = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\A\\Alien_species.mp4\"\n",
-    "    print(video_path)\n",
-    "\n",
-    "    #for video_file in VIDEO_FILES:\n",
-    "    cap = cv2.VideoCapture(video_path1)\n",
-    "    if not cap.isOpened():\n",
-    "        print(\"Error: Unable to open video file.\")\n",
-    "        exit()\n",
-    "\n",
-    "# Read and display frames from the video file\n",
-    "    while True:\n",
-    "    # Read a frame from the video\n",
-    "        ret, frame = cap.read()\n",
-    "\n",
-    "    # Check if the frame was read successfully\n",
-    "        if not ret:\n",
-    "            print(\"End of video.\")\n",
-    "            break\n",
-    "\n",
-    "    # Display the frame\n",
-    "        cv2.imshow(\"Video Player\", frame)\n",
-    "\n",
-    "    # Check for key press to exit (wait for 25 milliseconds)\n",
-    "        if cv2.waitKey(25) & 0xFF == ord('q'):\n",
-    "            break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (2).MP4\"\n",
-      "Hi\n",
-      "1\n",
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (3).MP4\"\n",
-      "Hi\n",
-      "2\n",
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (4).MP4\"\n",
-      "Hi\n",
-      "3\n",
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free (5).MP4\"\n",
-      "Hi\n",
-      "4\n",
-      "r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Videos_Sentence_Level\\are you free today\\free.MP4\"\n",
-      "Hi\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "for index, row in df.iterrows():\n",
-    "    #print(index)\n",
-    "    label = row[\"Sentences\"]  # Get the \"Word\" value for the current row\n",
-    "    video_path = rootpath + row[\"File location\"] + '\"'\n",
+    "    video_path = rootpath + row[\"File location\"]\n",
     "    video_path = video_path.replace('/', '\\\\')\n",
     "    print(video_path)\n",
     "    #video_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\A\\Alien_species.mp4\"\n",
@@ -677,7 +710,7 @@
     "\n",
     "        \n",
     "\n",
-    "            print(\"Hi1\")\n",
+    "            #print(\"Hi1\")\n",
     "            image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
     "            image.flags.writeable = False\n",
     "            image, results = mediapipe_detection(image, holistic)\n",
@@ -686,6 +719,7 @@
     "\n",
     "            keypoints = extract_keypoints(results)\n",
     "            print(\"Frame Num:\", cap.get(cv2.CAP_PROP_POS_FRAMES), keypoints)\n",
+    "            frame_number=cap.get(cv2.CAP_PROP_POS_FRAMES)\n",
     "\n",
     "            draw_styled_landmarks(image, results)\n",
     "\n",
@@ -693,8 +727,9 @@
     "                cv2.putText(image, 'STARTING COLLECTION', (120, 200),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 4, cv2.LINE_AA)\n",
     "            else:\n",
-    "                cv2.putText(image, 'Collecting frames for {}'.format(label), (15, 12),\n",
+    "                cv2.putText(image, 'Collecting frames for {} frame_number:{}'.format(label,frame_number), (15, 12),\n",
     "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "\n",
     "\n",
     "            cv2.imshow('OpenCV Feed', image)\n",
     "\n",
@@ -707,9 +742,9 @@
     "\n",
     "                frame_number += 1\n",
     "\n",
-    "            cap.release()\n",
-    "            print(\"Cap realease\")\n",
-    "            cv2.destroyAllWindows()\n"
+    "        cap.release()\n",
+    "        print(\"Cap realease\")\n",
+    "        cv2.destroyAllWindows()\n"
    ]
   },
   {
